--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="weather__condition">
                         <p><span class="temp__degrs">0<span class="degrs">&deg;</span></p>
 
-                        <img src="images/day/113.png" alt="weather condition">
+                        <img src="images/64x64/day/113.png" alt="weather condition">
 
                         <div class="time">
                             <span class="time__hourly">00:00</span>
@@ -70,7 +70,7 @@
                     <div class="weather__condition">
                         <p><span class="temp__degrs">0<span class="degrs">&deg;</span></p>
 
-                        <img src="images/day/113.png" alt="weather condition">
+                        <img src="images/64x64/day/113.png" alt="weather condition">
 
                         <div class="time">
                             <span class="time__hourly">00:00</span>
@@ -80,7 +80,7 @@
                     <div class="weather__condition">
                         <p><span class="temp__degrs">0<span class="degrs">&deg;</span></p>
 
-                        <img src="images/day/113.png" alt="weather condition">
+                        <img src="images/64x64/day/113.png" alt="weather condition">
 
                         <div class="time">
                             <span class="time__hourly">00:00</span>
@@ -90,7 +90,7 @@
                     <div class="weather__condition">
                         <p><span class="temp__degrs">0<span class="degrs">&deg;</span></p>
 
-                        <img src="images/day/113.png" alt="weather condition">
+                        <img src="images/64x64/day/113.png" alt="weather condition">
 
                         <div class="time">
                             <span class="time__hourly">00:00</span>
