--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Weather app for using everyday">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,600&display=swap" rel="stylesheet">
@@ -19,24 +20,24 @@
         <div class="container">
             <div class="weather__app">
                 <div class="weahter__condition-now">
-                    <h1>city</h1>
+                    <h1 class="city">City</h1>
                     <div class="weather__forecast-now">
 
                         <div class="temp__now">
-                            <span class="temp__now-degrs" id="temp__now-degrs">0&deg;</span><span class="degrs"></span>
+                            <span class="temp__now-degrs" id="temp__now-degrs">1</span>
                         </div>
-                        <div class="weather__condition-now">
-                            <img class="wth__cond--nowImage" id="weahter__condition-nowImage" src="images/64x64/day/365.png" alt="">
+                        <div class="weather__condition-image">
+                            <img class="wth__cond--nowImage" id="weahter__condition-nowImage" src="images/64x64/day/365.png" alt="wheater condition">
                         </div>
                     </div>
 
                 </div>
 
                 <div class="search__city">
-                    <input type="search" class="search__input" value="" id="city" placeholder="City">
+                    <input type="search" class="search__input  search_x " value="" id="search__city" placeholder="City">
                     <button class="btn" id="btn" type="btn">
-                    GO
-                </button>
+                        GO
+                    </button>
                 </div>
                 <div class="date">
                     <h2>Today</h2>
@@ -48,74 +49,114 @@
 
                 <div class="slider">
                     <div class="weather__condition">
-                        <p><span class="temp__degrs">0<span class="degrs">&deg;</span></p>
-
-                        <img src="images/day/113.png" alt="weather condition">
-
-                        <div class="time">
-                            <span class="time__hourly">00:00</span>
-                        </div>
-
-                    </div>
-                    <div class="weather__condition">
-                        <p><span class="temp__degrs">0<span class="degrs">&deg;</span></p>
+                        <p><span class="temp__degrs">10</p>
 
                         <img src="images/64x64/day/113.png" alt="weather condition">
 
                         <div class="time">
                             <span class="time__hourly">00:00</span>
-                        </div>
-
                     </div>
-                    <div class="weather__condition">
-                        <p><span class="temp__degrs">0<span class="degrs">&deg;</span></p>
 
-                        <img src="images/64x64/day/113.png" alt="weather condition">
-
-                        <div class="time">
-                            <span class="time__hourly">00:00</span>
-                        </div>
-
-                    </div>
-                    <div class="weather__condition">
-                        <p><span class="temp__degrs">0<span class="degrs">&deg;</span></p>
-
-                        <img src="images/64x64/day/113.png" alt="weather condition">
-
-                        <div class="time">
-                            <span class="time__hourly">00:00</span>
-                        </div>
-
-                    </div>
-                    <div class="weather__condition">
-                        <p><span class="temp__degrs">0<span class="degrs">&deg;</span></p>
-
-                        <img src="images/64x64/day/113.png" alt="weather condition">
-
-                        <div class="time">
-                            <span class="time__hourly">00:00</span>
-                        </div>
-
-                    </div>
-                    <div class="weather__condition">
-                        <p><span class="temp__degrs">0<span class="degrs">&deg;</span></p>
-
-                        <img src="images/64x64/day/113.png" alt="weather condition">
-
-                        <div class="time">
-                            <span class="time__hourly">00:00</span>
-                        </div>
-
-                    </div>
                 </div>
-                <!-- <img id="slide-right" class="arrow" src="images/64x64/arrow-right.png" width="50px" height="50px" /> -->
+                <div class="weather__condition">
+                    <p><span class="temp__degrs">10</p>
+
+                        <img src="images/64x64/day/113.png" alt="weather condition">
+
+                        <div class="time">
+                            <span class="time__hourly">00:00</span>
+                </div>
 
             </div>
+            <div class="weather__condition">
+                <p><span class="temp__degrs">10</p>
+
+                        <img src="images/64x64/day/113.png" alt="weather condition">
+
+                        <div class="time">
+                            <span class="time__hourly">00:00</span>
+            </div>
+
+        </div>
+        <div class="weather__condition">
+            <p><span class="temp__degrs">0</p>
+
+                        <img src="images/64x64/day/113.png" alt="weather condition">
+
+                        <div class="time">
+                            <span class="time__hourly">00:00</span>
+        </div>
+
+        </div>
+        <div class="weather__condition">
+            <p><span class="temp__degrs">0</p>
+
+                        <img src="images/64x64/day/113.png" alt="weather condition">
+
+                        <div class="time">
+                            <span class="time__hourly">00:00</span>
+        </div>
+
+        </div>
+        <div class="weather__condition">
+            <p><span class="temp__degrs">0</p>
+
+                        <img src="images/64x64/day/113.png" alt="weather condition">
+
+                        <div class="time">
+                            <span class="time__hourly">00:00</span>
+        </div>
+
+        </div>
+        <div class="weather__condition">
+            <p><span class="temp__degrs">0</p>
+
+                        <img src="images/64x64/day/113.png" alt="weather condition">
+
+                        <div class="time">
+                            <span class="time__hourly">00:00</span>
+        </div>
+
+        </div>
+        <div class="weather__condition">
+            <p><span class="temp__degrs">0</p>
+
+                        <img src="images/64x64/day/113.png" alt="weather condition">
+
+                        <div class="time">
+                            <span class="time__hourly">00:00</span>
+        </div>
+
+        </div>
+        <div class="weather__condition">
+            <p><span class="temp__degrs">0</p>
+
+                        <img src="images/64x64/day/113.png" alt="weather condition">
+
+                        <div class="time">
+                            <span class="time__hourly">00:00</span>
+        </div>
+
+        </div>
+        <div class="weather__condition">
+            <p><span class="temp__degrs">0</p>
+
+                        <img src="images/64x64/day/113.png" alt="weather condition">
+
+                        <div class="time">
+                            <span class="time__hourly">00:00</span>
+        </div>
+
+        </div>
+        </div>
+        <!-- <img id="slide-right" class="arrow" src="images/64x64/arrow-right.png" width="50px" height="50px" /> -->
+
+        </div>
 
 
 
         </div>
-        </div>
+
 
         <script src="main.js"></script>
     </body>
