--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="weather__app">
                 <div class="weahter__condition-now">
-                    <h1 class="city">City</h1>
+                    <h1 id="city" class="city">City</h1>
                     <div class="weather__forecast-now">
 
                         <div class="temp__now">
