--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
         </div>
 
 
-        <script src="main.js"></script>
-    </body>
+        
+<script defer src="main.js"></script>   
 
-    </html>
+    
 
 </body>
 
