--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="weather__forecast-now">
 
                         <div class="temp__now">
-                            <span class="temp__now-degrs" id="temp__now-degrs">&176;<span>
+                            <span class="temp__now-degrs" id="temp__now-degrs"><span>
                         </div>
                         <div class="weather__condition-image">
                             <img class="wth__cond--nowImage" id="weahter__condition-nowImage" src="" alt="wheater condition">
@@ -55,48 +55,182 @@
                 <div class="slide__container"> -->
 
                     <div class="slider">
+
                         <div class="weather__condition">
-                            <p><span class="temp__degrs">10</span></p>
-                            <img class="firstBlockImage" src="images/64x64/day/113.png" alt="weather condition">
+                            <p><span class="temp__degrs temp--1 ">&176;</span></p>
+                            <img class="images image--1" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly zero">00:00</span>
+                                <span class="time__hourly time--1">00:00</span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs">10</span></p>
-                            <img class="firstBlockImage" src="images/64x64/day/113.png" alt="weather condition">
+                            <p><span class="temp__degrs temp-2 ">10</span></p>
+                            <img class="images image--2" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly zero">00:00</span>
+                                <span class="time__hourly time--2">00:00</span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs">10</span></p>
-                            <img class="firstBlockImage" src="images/64x64/day/113.png" alt="weather condition">
+                            <p><span class="temp__degrs temp--3 ">10</span></p>
+                            <img class="images image--3" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly zero">00:00</span>
+                                <span class="time__hourly time--3">00:00</span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs">10</span></p>
-                            <img class="firstBlockImage" src="images/64x64/day/113.png" alt="weather condition">
+                            <p><span class="temp__degrs temp--4 ">10</span></p>
+                            <img class="images image--4" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly zero">00:00</span>
+                                <span class="time__hourly time--4">00:00</span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs">10</span></p>
-                            <img class="firstBlockImage" src="images/64x64/day/113.png" alt="weather condition">
+                            <p><span class="temp__degrs temp--5 ">10</span></p>
+                            <img class="images image--5" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly zero">00:00</span>
+                                <span class="time__hourly time--5">00:00</span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs">10</span></p>
-                            <img class="firstBlockImage" src="images/64x64/day/113.png" alt="weather condition">
+                            <p><span class="temp__degrs temp--6 ">10</span></p>
+                            <img class="images image--6" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly zero">00:00</span>
+                                <span class="time__hourly time--6">00:00</span>
                             </div>
                         </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--7 ">10</span></p>
+                            <img class="images image--7" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--7">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--8 ">10</span></p>
+                            <img class="images image--8" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--8">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--9 ">10</span></p>
+                            <img class="images image--9" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--9">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--10 ">10</span></p>
+                            <img class="images image--10" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--10">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--11 ">10</span></p>
+                            <img class="images image--11" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--11">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--12 ">10</span></p>
+                            <img class="images image--12" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--12">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--13 ">10</span></p>
+                            <img class="images image--13" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--13">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--14 ">10</span></p>
+                            <img class="images image--14" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--14">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--15 ">10</span></p>
+                            <img class="images image--15" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--15">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--16 ">10</span></p>
+                            <img class="images image--16" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--16">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--17 ">10</span></p>
+                            <img class="images image--17" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--17">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--18 ">10</span></p>
+                            <img class="images image--18" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--18">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--19 ">10</span></p>
+                            <img class="images image--19" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--19">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--20 ">10</span></p>
+                            <img class="images image--20" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--20">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--21 ">10</span></p>
+                            <img class="images image--21" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--21">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--22 ">10</span></p>
+                            <img class="images image--22" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--22">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--23 ">10</span></p>
+                            <img class="images image--23" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--23">00:00</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs temp--24 ">10</span></p>
+                            <img class="images image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--24">00:00</span>
+                            </div>
+                        </div>
+
+
+
+
+
+
+
 
 
 
