--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="weather__app">
                 <div class="weahter__condition-now">
-                    <h1 id="city" class="city">City</h1>
+                    <h1 id="city" class="city"></h1>
                     <div class="weather__forecast-now">
 
                         <div class="temp__now">
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="search__city">
-                    <input type="search" class="search__input  search_x " value="" id="search__city" placeholder="City">
+                    <input type="search" class="search__input  search_x " value="" id="search__city" placeholder="Location">
                     <button class="btn" id="btn" type="btn">
                         GO
                     </button>
@@ -43,10 +43,10 @@
                     <div class="date">
                         <h2 class="today">Today</h2>
                         <div>
-                            <span class="today__date" id="today__date">26/04/23</span>
+                            <span class="today__date" id="today__date"></span>
                         </div>
                         <div>
-                            <span class="today__time" id="time__date">00:00:00</span>
+                            <span class="today__time" id="time__date"></span>
                         </div>
                     </div>
 
@@ -57,173 +57,180 @@
                     <div class="slider">
 
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--1 ">&176;</span></p>
+                            <p><span class="temp__degrs temp--1 "></span></p>
                             <img class="images image--1" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--1">00:00</span>
+                                <span class="time__hourly time--1"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp-2 ">10</span></p>
+                            <p><span class="temp__degrs temp-2 "></span></p>
                             <img class="images image--2" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--2">00:00</span>
+                                <span class="time__hourly time--2"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--3 ">10</span></p>
+                            <p><span class="temp__degrs temp--3 "></span></p>
                             <img class="images image--3" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--3">00:00</span>
+                                <span class="time__hourly time--3"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--4 ">10</span></p>
+                            <p><span class="temp__degrs temp--4 "></span></p>
                             <img class="images image--4" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--4">00:00</span>
+                                <span class="time__hourly time--4"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--5 ">10</span></p>
+                            <p><span class="temp__degrs temp--5 "></span></p>
                             <img class="images image--5" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--5">00:00</span>
+                                <span class="time__hourly time--5"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--6 ">10</span></p>
+                            <p><span class="temp__degrs temp--6 "></span></p>
                             <img class="images image--6" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--6">00:00</span>
+                                <span class="time__hourly time--6"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--7 ">10</span></p>
+                            <p><span class="temp__degrs temp--7 "></span></p>
                             <img class="images image--7" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--7">00:00</span>
+                                <span class="time__hourly time--7"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--8 ">10</span></p>
+                            <p><span class="temp__degrs temp--8 "></span></p>
                             <img class="images image--8" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--8">00:00</span>
+                                <span class="time__hourly time--8"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--9 ">10</span></p>
+                            <p><span class="temp__degrs temp--9 "></span></p>
                             <img class="images image--9" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--9">00:00</span>
+                                <span class="time__hourly time--9"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--10 ">10</span></p>
+                            <p><span class="temp__degrs temp--10 "></span></p>
                             <img class="images image--10" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--10">00:00</span>
+                                <span class="time__hourly time--10"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--11 ">10</span></p>
+                            <p><span class="temp__degrs temp--11 "></span></p>
                             <img class="images image--11" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--11">00:00</span>
+                                <span class="time__hourly time--11"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--12 ">10</span></p>
+                            <p><span class="temp__degrs temp--12 "></span></p>
                             <img class="images image--12" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--12">00:00</span>
+                                <span class="time__hourly time--12"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--13 ">10</span></p>
+                            <p><span class="temp__degrs temp--13 "></span></p>
                             <img class="images image--13" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--13">00:00</span>
+                                <span class="time__hourly time--13"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--14 ">10</span></p>
+                            <p><span class="temp__degrs temp--14 "></span></p>
                             <img class="images image--14" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--14">00:00</span>
+                                <span class="time__hourly time--14"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--15 ">10</span></p>
+                            <p><span class="temp__degrs temp--15 "></span></p>
                             <img class="images image--15" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--15">00:00</span>
+                                <span class="time__hourly time--15"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--16 ">10</span></p>
+                            <p><span class="temp__degrs temp--16 "></span></p>
                             <img class="images image--16" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--16">00:00</span>
+                                <span class="time__hourly time--16"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--17 ">10</span></p>
+                            <p><span class="temp__degrs temp--17 "></span></p>
                             <img class="images image--17" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--17">00:00</span>
+                                <span class="time__hourly time--17"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--18 ">10</span></p>
+                            <p><span class="temp__degrs temp--18 "></span></p>
                             <img class="images image--18" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--18">00:00</span>
+                                <span class="time__hourly time--18"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--19 ">10</span></p>
+                            <p><span class="temp__degrs temp--19 "></span></p>
                             <img class="images image--19" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--19">00:00</span>
+                                <span class="time__hourly time--19"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--20 ">10</span></p>
+                            <p><span class="temp__degrs temp--20 "></span></p>
                             <img class="images image--20" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--20">00:00</span>
+                                <span class="time__hourly time--20"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--21 ">10</span></p>
+                            <p><span class="temp__degrs temp--21 "></span></p>
                             <img class="images image--21" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--21">00:00</span>
+                                <span class="time__hourly time--21"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--22 ">10</span></p>
+                            <p><span class="temp__degrs temp--22 "></span></p>
                             <img class="images image--22" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--22">00:00</span>
+                                <span class="time__hourly time--22"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--23 ">10</span></p>
+                            <p><span class="temp__degrs temp--23 "></span></p>
                             <img class="images image--23" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--23">00:00</span>
+                                <span class="time__hourly time--23"></span>
                             </div>
                         </div>
                         <div class="weather__condition">
-                            <p><span class="temp__degrs temp--24 ">10</span></p>
+                            <p><span class="temp__degrs temp--24 "></span></p>
                             <img class="images image--24" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--24">00:00</span>
+                                <span class="time__hourly time--24"></span>
                             </div>
                         </div>
+                        <!-- <div class="weather__condition">
+                            <p><span class="temp__degrs temp--24 "></span></p>
+                            <img class="images image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly time--25"></span>
+                            </div>
+                        </div> -->
 
 
 
