--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body>
         <div class="container">
-            <div class="weather__app">
+            <div class="weather__app " id="change__backgr">
                 <div class="weahter__condition-now">
                     <h1 id="city" class="city"></h1>
                     <div class="weather__forecast-now">
@@ -224,13 +224,173 @@
                                 <span class="time__hourly time--24"></span>
                             </div>
                         </div>
-                        <!-- <div class="weather__condition">
-                            <p><span class="temp__degrs temp--24 "></span></p>
-                            <img class="images image--24" src="images/64x64/day/113.png" alt="weather condition">
+
+                        <!-- second day block -->
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
                             <div class="time">
-                                <span class="time__hourly time--25"></span>
+                                <span class="time__hourly2 time--24">22</span>
                             </div>
-                        </div> -->
+                        </div>
+
+
+
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs2 temp--24 ">55</span></p>
+                            <img class="images2 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly2 time--24">22</span>
+                            </div>
+                        </div>
 
 
 
