--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,600&display=swap"
+            rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>Weather App</title>
 
@@ -27,33 +28,35 @@
                             <span class="temp__now-degrs" id="temp__now-degrs"><span>
                         </div>
                         <div class="weather__condition-image">
-                            <img class="wth__cond--nowImage" id="weahter__condition-nowImage" src="" alt="wheater condition">
+                            <img class="wth__cond--nowImage" id="weahter__condition-nowImage" src=""
+                                alt="wheater condition">
                         </div>
                     </div>
 
                 </div>
 
                 <div class="search__city">
-                    <input type="search" class="search__input  search_x " value="" id="search__city" placeholder="Location">
+                    <input type="search" class="search__input  search_x " value="" id="search__city"
+                        placeholder="Location">
                     <button class="btn" id="btn" type="btn">
                         GO
                     </button>
                 </div>
-               
-                    <div class="date">
-                        <h2 class="today">Today</h2>
-                        <div>
-                            <span class="today__date" id="today__date"></span>
-                        </div>
-                        <div>
-                            <span class="today__time" id="time__date"></span>
-                        </div>
+
+                <div class="date">
+                    <h2 class="today">Today</h2>
+                    <div>
+                        <span class="today__date" id="today__date"></span>
                     </div>
+                    <div>
+                        <span class="today__time" id="time__date"></span>
+                    </div>
+                </div>
 
 
-                    <!-- <img id="slide-left" class="arrow" src="images/64x64/arrow-left.png" width="50px" height="50px" />
+                <!-- <img id="slide-left" class="arrow" src="images/64x64/arrow-left.png" width="50px" height="50px" />
                 <div class="slide__container"> -->
-
+                <div class="sliders">
                     <div class="slider">
 
                         <div class="weather__condition">
@@ -391,25 +394,209 @@
                                 <span class="time__hourly2 time--24">22</span>
                             </div>
                         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                     </div>
-                </div>
-                <!-- <img id="slide-right" class="arrow" src="images/64x64/arrow-right.png" width="50px" height="50px" /> -->
+                    <!-- forecast tomorow -->
 
+                    <h2>Forecast tomorow</h2>
+                    <h2 id="tomorow--date">
+                        03.10.23
+                    </h2>
+
+
+                    <div class="slider2">
+
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+
+
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                        <div class="weather__condition">
+                            <p><span class="temp__degrs3 temp--24 ">55</span></p>
+                            <img class="images3 image--24" src="images/64x64/day/113.png" alt="weather condition">
+                            <div class="time">
+                                <span class="time__hourly3 time--24">22</span>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
             </div>
+            <!-- <img id="slide-right" class="arrow" src="images/64x64/arrow-right.png" width="50px" height="50px" /> -->
+
+        </div>
 
 
 
